tests/bad/assign_method_to_var.ae
/// fail: Cannot access method without calling it

struct Foo {}

def Foo::get(this) {}

def main() {
    let f: Foo
    let g = f.get
    let h = Foo::get
}
